[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.47"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
asynchronous-codec = "0.6.2"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
futures = "0.3.28"
libp2p = { version = "0.52.3", features = ["async-std", "dns", "macros", "noise", "ping", "tcp", "websocket", "yamux"] }