[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-test-handshake = { version = "0.1.0", git = "https://github.com/cdamian/libp2p-test-handshake.git", branch = "main" }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3.28"
libp2p = { version = "0.51.3", features = ["async-std", "macros", "ping", "tcp", "yamux"] }